--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="navlogo border">
                <div class="logo"></div> 
             </div></a>
-            <a href="https://www.instagram.com/itz_kaushu_/?utm_source=ig_web_button_share_sheet" style="color: white; text-decoration: none;" >
+            <a href="https://en.wikipedia.org/wiki/Breast" style="color: white; text-decoration: none;" >
             <div class="navadd">
                 <p id="delivering">delivering to patna 800026</p>
                 <div class="addicon"> <i class="fa-solid fa-location-dot"></i> <B>Update location</B></div> 
@@ -86,3 +86,4 @@
 </body>
 
 </html>
+
